--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -33,6 +33,9 @@ This file is a global file which is used in the entire app, anything modified he
 	transform-origin: left;
 }
 
+.ShowBottom {
+	animation: ShowBottom .5s ease;
+}
 
 .btt:hover {
 	box-shadow: -34px 23px 116px 42px rgba(0, 0, 170, 0.5);
@@ -44,7 +47,7 @@ This file is a global file which is used in the entire app, anything modified he
 
 
 .shadow-c {
-	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+	box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 24px;
 }
 
 /* Animations */
@@ -94,5 +97,18 @@ This file is a global file which is used in the entire app, anything modified he
 	}
 	to {
 		transform: scaleX(1);
+	}
+}
+
+
+
+@keyframes ShowBottom {
+	from {
+		opacity: 0;
+		transform: translateY(-10px);
+	}
+	to {
+		opacity: 1;
+		transform: translateY(0);
 	}
 }
