--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -11,6 +11,22 @@ This file is a global file which is used in the entire app, anything modified he
 	transition: all 1s ease;
 }
 
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-text-fill-color: white;
+  -webkit-box-shadow: 0 0 0px 1000px none inset;
+  background: none;
+  transition: background-color 5000s ease 0s;
+}
+
 .reveal {
 	animation: Reveal 1s ease;
 }
@@ -33,7 +49,7 @@ This file is a global file which is used in the entire app, anything modified he
 	transform-origin: left;
 }
 
-.ShowBottom {
+.ShowTop {
 	animation: ShowBottom .5s ease;
 }
 
@@ -101,6 +117,39 @@ This file is a global file which is used in the entire app, anything modified he
 }
 
 
+
+@keyframes ShowTop {
+	from {
+		opacity: 0;
+		transform: translateY(-10px);
+	}
+	to {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
+@keyframes ShowBottom {
+	from {
+		opacity: 0;
+		transform: translateY(-10px);
+	}
+	to {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
+@keyframes ShowBottom {
+	from {
+		opacity: 0;
+		transform: translateY(-10px);
+	}
+	to {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
 
 @keyframes ShowBottom {
 	from {
