--- a/src/app.css
+++ b/src/app.css
@@ -8,7 +8,6 @@ This file is a global file which is used in the entire app, anything modified he
 
 * {
 	box-sizing: border-box;
-	transition: all 1s ease;
 }
 
 .poppins {
@@ -66,9 +65,10 @@ select:-webkit-autofill:focus {
 .shadow-c {
 	box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 24px;
 }
-
+.border-unset {
+	border-style: unset;
+}
 /* Animations */
-
 @keyframes showFromRight {
 	from {
 		transform: translateX(100vw);
